k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-app
  namespace: mentoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: travel-app
      version: 1.0
  template:
    metadata:
      labels:
        app: travel-app
        version: 1.0
        type: backend
        provider: iclinic
    spec:
      nodeSelector:
        agentpool: qc2nodes
      containers:
        - name: travel-app
          image: iclinicacr.azurecr.io/travel-app
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
